wallet refactor
