# net/NGigGossip4Nostr/GigLNDWalletAPIClient/IWalletAPI.cs
@@ -1,5 +1,6 @@
 ﻿using System;
 using System.Net.Http;
+using System.Threading;
 using Microsoft.AspNetCore.SignalR.Client;
 using NetworkClientToolkit;
 
@@ -25,12 +26,15 @@ public interface IWalletAPI
     Task<GuidResult> RegisterPayoutAsync(string authToken, long satoshis, string btcAddress, long txfee, System.Threading.CancellationToken cancellationToken);
     Task<InvoiceRetResult> AddInvoiceAsync(string authToken, long satoshis, string memo, long expiry, System.Threading.CancellationToken cancellationToken);
     Task<InvoiceRetResult> AddHodlInvoiceAsync(string authToken, long satoshis, string hash, string memo, long expiry, System.Threading.CancellationToken cancellationToken);
-    Task<PayReqResult> DecodeInvoiceAsync(string authToken, string paymentRequest, System.Threading.CancellationToken cancellationToken);
-    Task<Result> SendPaymentAsync(string authToken, string paymentrequest, int timeout, System.Threading.CancellationToken cancellationToken);
+    Task<PayReqRetResult> DecodeInvoiceAsync(string authToken, string paymentRequest, System.Threading.CancellationToken cancellationToken);
+    Task<RouteFeeResponseResult> EstimateRouteFeeAsync(string authToken, string paymentrequest, CancellationToken cancellationToken);
+    Task<Result> SendPaymentAsync(string authToken, string paymentrequest, int timeout, long feelimit, System.Threading.CancellationToken cancellationToken);
     Task<Result> SettleInvoiceAsync(string authToken, string preimage, System.Threading.CancellationToken cancellationToken);
     Task<Result> CancelInvoiceAsync(string authToken, string paymenthash, System.Threading.CancellationToken cancellationToken);
     Task<StringResult> GetInvoiceStateAsync(string authToken, string paymenthash, System.Threading.CancellationToken cancellationToken);
     Task<StringResult> GetPaymentStatusAsync(string authToken, string paymenthash, System.Threading.CancellationToken cancellationToken);
+    Task<InvoiceRetArrayResult> ListInvoicesAsync(string authToken, System.Threading.CancellationToken cancellationToken);
+    Task<PaymentRetArrayResult> ListPaymentsAsync(string authToken, System.Threading.CancellationToken cancellationToken);
 
     IInvoiceStateUpdatesClient CreateInvoiceStateUpdatesClient();
     IPaymentStatusUpdatesClient CreatePaymentStatusUpdatesClient();
@@ -98,7 +102,7 @@ public class WalletAPIRetryWrapper : IWalletAPI
         return await RetryPolicy.WithRetryPolicy(() => api.CloseReserveAsync(authToken, reserveId, cancellationToken));
     }
 
-    public async Task<PayReqResult> DecodeInvoiceAsync(string authToken, string paymentRequest, CancellationToken cancellationToken)
+    public async Task<PayReqRetResult> DecodeInvoiceAsync(string authToken, string paymentRequest, CancellationToken cancellationToken)
     {
         return await RetryPolicy.WithRetryPolicy(() => api.DecodeInvoiceAsync(authToken, paymentRequest, cancellationToken));
     }
@@ -168,9 +172,9 @@ public class WalletAPIRetryWrapper : IWalletAPI
         return await RetryPolicy.WithRetryPolicy(() => api.RegisterPayoutAsync(authToken, satoshis, btcAddress, txfee, cancellationToken));
     }
 
-    public async Task<Result> SendPaymentAsync(string authToken, string paymentrequest, int timeout, CancellationToken cancellationToken)
+    public async Task<Result> SendPaymentAsync(string authToken, string paymentrequest, int timeout, long feelimit, CancellationToken cancellationToken)
     {
-        return await RetryPolicy.WithRetryPolicy(() => api.SendPaymentAsync(authToken, paymentrequest, timeout, cancellationToken));
+        return await RetryPolicy.WithRetryPolicy(() => api.SendPaymentAsync(authToken, paymentrequest, timeout, feelimit, cancellationToken));
     }
 
     public async Task<Result> SendToAddressAsync(string authToken, string bitcoinAddr, long satoshis, CancellationToken cancellationToken)
@@ -186,5 +190,20 @@ public class WalletAPIRetryWrapper : IWalletAPI
     public async Task<Result> TopUpAndMine6BlocksAsync(string authToken, string bitcoinAddr, long satoshis, CancellationToken cancellationToken)
     {
         return await RetryPolicy.WithRetryPolicy(() => api.TopUpAndMine6BlocksAsync(authToken, bitcoinAddr, satoshis, cancellationToken));
+    }
+
+    public async Task<InvoiceRetArrayResult> ListInvoicesAsync(string authToken, CancellationToken cancellationToken)
+    {
+        return await RetryPolicy.WithRetryPolicy(() => api.ListInvoicesAsync(authToken, cancellationToken));
+    }
+
+    public async Task<PaymentRetArrayResult> ListPaymentsAsync(string authToken, CancellationToken cancellationToken)
+    {
+        return await RetryPolicy.WithRetryPolicy(() => api.ListPaymentsAsync(authToken, cancellationToken));
+    }
+
+    public async Task<RouteFeeResponseResult> EstimateRouteFeeAsync(string authToken, string paymentrequest, CancellationToken cancellationToken)
+    {
+        return await RetryPolicy.WithRetryPolicy(() => api.EstimateRouteFeeAsync(authToken, paymentrequest, cancellationToken));
     }
 }
