# net/NGigGossip4Nostr/GigLNDWalletAPIClient/OpenAPIs/swagger.json
@@ -791,7 +791,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PayReqResult"
+                  "$ref": "#/components/schemas/PayReqRetResult"
                 }
               }
             }
@@ -838,6 +838,16 @@
               "type": "integer",
               "format": "int32"
             }
+          },
+          {
+            "name": "feelimit",
+            "in": "query",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         ],
         "responses": {
@@ -847,6 +857,50 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Result"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/estimateroutefee": {
+      "get": {
+        "tags": [
+          "GigLNDWalletAPI"
+        ],
+        "summary": "Estimates Route Fee for a payment via lightning network for the given payment request",
+        "description": "Estimates Route Fee for a payment described by the passed paymentrequest to the final destination.",
+        "operationId": "EstimateRouteFee",
+        "parameters": [
+          {
+            "name": "authToken",
+            "in": "query",
+            "description": "Authorisation token for the communication",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "paymentrequest",
+            "in": "query",
+            "description": "A bare-bones invoice for a payment within the Lightning Network. With the details of the invoice, the sender has all the data necessary to send a payment to the recipient.",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RouteFeeResponseResult"
                 }
               }
             }
@@ -979,6 +1033,74 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/StringResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/listinvoices": {
+      "get": {
+        "tags": [
+          "GigLNDWalletAPI"
+        ],
+        "summary": "Returns list of all invoices related to the account",
+        "description": "Returns list of all invoices related to the account",
+        "operationId": "ListInvoices",
+        "parameters": [
+          {
+            "name": "authToken",
+            "in": "query",
+            "description": "Authorisation token for the communication",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/InvoiceRetArrayResult"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/listpayments": {
+      "get": {
+        "tags": [
+          "GigLNDWalletAPI"
+        ],
+        "summary": "Returns list of all payments related to the account",
+        "description": "Returns list of all payments related to the account",
+        "operationId": "ListPayments",
+        "parameters": [
+          {
+            "name": "authToken",
+            "in": "query",
+            "description": "Authorisation token for the communication",
+            "required": true,
+            "style": "form",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PaymentRetArrayResult"
                 }
               }
             }
@@ -1143,22 +1265,6 @@
         },
         "additionalProperties": false
       },
-      "Feature": {
-        "type": "object",
-        "properties": {
-          "name": {
-            "type": "string",
-            "nullable": true
-          },
-          "isRequired": {
-            "type": "boolean"
-          },
-          "isKnown": {
-            "type": "boolean"
-          }
-        },
-        "additionalProperties": false
-      },
       "FeeEstimateRet": {
         "type": "object",
         "properties": {
@@ -1206,32 +1312,6 @@
         },
         "additionalProperties": false
       },
-      "HopHint": {
-        "type": "object",
-        "properties": {
-          "nodeId": {
-            "type": "string",
-            "nullable": true
-          },
-          "chanId": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "feeBaseMsat": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "feeProportionalMillionths": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "cltvExpiryDelta": {
-            "type": "integer",
-            "format": "int32"
-          }
-        },
-        "additionalProperties": false
-      },
       "Int64Result": {
         "type": "object",
         "properties": {
@@ -1252,11 +1332,71 @@
       "InvoiceRet": {
         "type": "object",
         "properties": {
-          "paymentRequest": {
+          "description": {
+            "type": "string",
+            "nullable": true
+          },
+          "descriptionHash": {
+            "type": "string",
+            "nullable": true
+          },
+          "preimage": {
             "type": "string",
             "nullable": true
           },
           "paymentHash": {
+            "type": "string",
+            "nullable": true
+          },
+          "paymentAddr": {
+            "type": "string",
+            "nullable": true
+          },
+          "valueSat": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "creationDate": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "settleDate": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "paymentRequest": {
+            "type": "string",
+            "nullable": true
+          },
+          "expiry": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "amtPaidSat": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "state": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "InvoiceRetArrayResult": {
+        "type": "object",
+        "properties": {
+          "value": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/InvoiceRet"
+            },
+            "nullable": true
+          },
+          "errorCode": {
+            "$ref": "#/components/schemas/LNDWalletErrorCode"
+          },
+          "errorMessage": {
             "type": "string",
             "nullable": true
           }
@@ -1292,7 +1432,8 @@
           8,
           9,
           10,
-          11
+          11,
+          12
         ],
         "type": "integer",
         "format": "int32"
@@ -1339,18 +1480,10 @@
         },
         "additionalProperties": false
       },
-      "PayReq": {
+      "PayReqRet": {
         "type": "object",
         "properties": {
-          "destination": {
-            "type": "string",
-            "nullable": true
-          },
-          "paymentHash": {
-            "type": "string",
-            "nullable": true
-          },
-          "numSatoshis": {
+          "valueSat": {
             "type": "integer",
             "format": "int64"
           },
@@ -1370,50 +1503,72 @@
             "type": "string",
             "nullable": true
           },
-          "fallbackAddr": {
+          "paymentHash": {
             "type": "string",
             "nullable": true
           },
-          "cltvExpiry": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "routeHints": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/RouteHint"
-            },
-            "nullable": true,
-            "readOnly": true
-          },
           "paymentAddr": {
-            "type": "array",
-            "items": {
-              "type": "integer",
-              "format": "int32"
-            },
+            "type": "string",
             "nullable": true
-          },
-          "numMsat": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "features": {
-            "type": "object",
-            "additionalProperties": {
-              "$ref": "#/components/schemas/Feature"
-            },
-            "nullable": true,
-            "readOnly": true
           }
         },
         "additionalProperties": false
       },
-      "PayReqResult": {
+      "PayReqRetResult": {
         "type": "object",
         "properties": {
           "value": {
-            "$ref": "#/components/schemas/PayReq"
+            "$ref": "#/components/schemas/PayReqRet"
+          },
+          "errorCode": {
+            "$ref": "#/components/schemas/LNDWalletErrorCode"
+          },
+          "errorMessage": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "PaymentRet": {
+        "type": "object",
+        "properties": {
+          "paymentHash": {
+            "type": "string",
+            "nullable": true
+          },
+          "valueSat": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "creationTimeNs": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "feeSat": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "status": {
+            "type": "string",
+            "nullable": true
+          },
+          "paymentRequest": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "PaymentRetArrayResult": {
+        "type": "object",
+        "properties": {
+          "value": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/PaymentRet"
+            },
+            "nullable": true
           },
           "errorCode": {
             "$ref": "#/components/schemas/LNDWalletErrorCode"
@@ -1438,16 +1593,32 @@
         },
         "additionalProperties": false
       },
-      "RouteHint": {
+      "RouteFeeResponse": {
         "type": "object",
         "properties": {
-          "hopHints": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/HopHint"
-            },
-            "nullable": true,
-            "readOnly": true
+          "routingFeeMsat": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "timeLockDelay": {
+            "type": "integer",
+            "format": "int64"
+          }
+        },
+        "additionalProperties": false
+      },
+      "RouteFeeResponseResult": {
+        "type": "object",
+        "properties": {
+          "value": {
+            "$ref": "#/components/schemas/RouteFeeResponse"
+          },
+          "errorCode": {
+            "$ref": "#/components/schemas/LNDWalletErrorCode"
+          },
+          "errorMessage": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
